<resources>
    <string name="app_name">O planner</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>
    <string name="description">Description</string>
    <string name="choose_deadline">Choose deadline</string>
    <string name="add_subtask">Add subtask</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="emotion">Select your emotion</string>
    <string name="describe_your_day">Describe your day</string>
    <string name="main_menu">Main menu</string>
    <string name="ideas">Ideas</string>
    <string name="diary">Diary</string>
    <string name="settings">Settings</string>
    <string name="what_to_do">What to do today?</string>
    <string name="delete">DELETE</string>
    <string-array name="languages_array">
        <item>Select language</item>
        <item>English</item>
        <item>Russian</item>
        <item>Slovak</item>
    </string-array>


    <string name="set_reminder">Reminders</string>
    <string name="set_reminder_time">Set reminder time</string>
    <string name="reminder_time" translatable="false">8:00</string>

    <string name="notif_title">See your task for today</string>

</resources>
