<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_line">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/set_reminder"
                android:textColor="@color/colorPrimaryDark" />


            <Switch
                android:id="@+id/reminderSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:theme="@style/Switch" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/set_reminder_time"
                    android:textColor="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/timeImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_timer" />

            </LinearLayout>


            <TextView
                android:id="@+id/time"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:text="@string/reminder_time"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>